Closed Bug 1242751 Opened 8 years ago Closed 8 years ago

layout/reftests/css-gradients/linear-diagonal-8a triggers assertion under Skia content

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: lsalzman, Assigned: lsalzman)

Details

Attachments

(1 file)

When running the reftest layout/reftests/css-gradients/linear-diagonal-8a under Skia content, the following assertion is triggered:

gfx/skia/skia/src/effects/gradients/SkLinearGradient.cpp:863
SkASSERT(0 == count || fx <= p0);
This is just a backport of the fix committed upstream here: https://skia.googlesource.com/skia/+/aeab8ea4d7492dc996fa72de7298de81f8deed93

It works around precision issues with linear gradient advancement by clamping the position to be in range.
Attachment #8711884 - Flags: review?(jmuizelaar)
Attachment #8711884 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/b19f06f5dec8
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: