Bug 1242751 - fix assertion in SkLinearGradient. r=jmuizelaar